# Smith_Agentic_CLI

./: Cargo.toml  README.md
src/: client.rs  display.rs  main.rs
src/commands/: cancel.rs  crews.rs  mod.rs  outputs.rs  run.rs  runs.rs  status.rs  watch.rs
