[package]
name        = "smith"
version     = "0.1.0"
edition     = "2021"
description = "CLI for Smith_Agentic - run agent crews from your terminal"
license     = "MIT"
authors     = ["AddisonTech"]

[[bin]]
name = "smith"
path = "src/main.rs"

[dependencies]
clap       = { version = "4",    features = ["derive"] }
reqwest    = { version = "0.12", features = ["json", "blocking"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
tokio      = { version = "1",    features = ["full"] }
colored    = "2"
